--- a/OnLand/ControlLaptop/templates/_cards/bms_values.html
+++ b/OnLand/ControlLaptop/templates/_cards/bms_values.html
@@ -13,7 +13,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for key, value in electrical_senesors.items() %}
+            {% for key, value in bms_senesors.items() %}
                 <tr class="d-flex sensor-row" id="{{ key }}">
                     <th class="text-center col-5" scope="row">{{ value['name_pretty'] }}</th>
                     <td id="{{ key }}-min" class="col-2"></td>
