--- a/OnLand/ControlLaptop/templates/dts.html
+++ b/OnLand/ControlLaptop/templates/dts.html
@@ -15,11 +15,16 @@
     </div>
 
     <div class="row">
-       <div class="col-md-6">
+       <div class="col-md-12">
           {% include '_cards/sensor_values.html' %}
        </div>
+    </div>
+    <div class="row">
        <div class="col-md-6">
-          {% include '_cards/electrial_values.html' %}
+           {% include '_cards/bms_values.html' %}
+       </div>
+        <div class="col-md-6">
+            {% include '_cards/inverter_values.html' %}
        </div>
     </div>
 
