--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -18,7 +18,7 @@
     <link href="{{ url_for('static', filename='assets/vendors/bootstrap-toggle-master/css/bootstrap-toggle.min.css') }}" rel="stylesheet"/>
 
     <!--  Fonts and icons -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
+    <link href="{{ url_for('static', filename='assets/vendors/fonts_icons/googlefont-Roboto.css') }}" rel="stylesheet" >
     <link href="{{ url_for('static', filename='assets/vendors/fonts_icons/pe-icon-7-stroke.css') }}" rel="stylesheet" />
     <!-- Animated Icons -->
     <link href="{{ url_for('static',filename='assets/vendors/loaders/loaders.css') }}" rel="stylesheet">
