Dashboard layout for flight profile, navigation and commands

--- a/OnLand/ControlLaptop/templates/_cards/states.html
+++ b/OnLand/ControlLaptop/templates/_cards/states.html
@@ -1,7 +1,7 @@
 <div class="card card-top">
    <div class="header">
-      <h4 class="title">Navigation</h4>
-      <p class="category">Where she to</p>
+      <h4 class="title">States</h4>
+      <p class="category">How she be</p>
    </div>
    <div class="content row0">
 <table class="table">
@@ -12,18 +12,18 @@
   <tbody>
     <tr>
       <th scope="row"></th>
-      <td><b>Distance</b></td>
-      <td><span id="distanceTraveled">0</span>m</td>
+      <td><b>Flight Computer</b></td>
+      <td><span id="motorToruqe">Standby</span></td>
     </tr>
     <tr>
       <th scope="row"></th>
-      <td><b>Velocity</b></td>
-      <td><span id="velocity">0</span>m/s</td>
+      <td><b>Brake Node</b></td>
+      <td><span id="maxFlightDistance">Standby</span></td>
     </tr>
     <tr>
       <th scope="row"></th>
-      <td><b>Acceleration</b></td>
-      <td><span id="acceleration">0</span>m/s/s</td>
+      <td><b>LVDC Node</b></td>
+      <td><span id="maxFlightTime">Standby</span></td>
     </tr>
   </tbody>
 </table>
