--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -23,6 +23,10 @@
 
     <!-- Connection Bar -->
     <link href="{{ url_for('static',filename='assets/css/ConnectionBar.css') }}" rel="stylesheet">
+
+
+    <!-- Connection Bar -->
+    <link href="{{ url_for('static',filename='assets/css/Base.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block pageStyles %}
