--- a/OnLand/ControlLaptop/templates/_cards/manual_state.html
+++ b/OnLand/ControlLaptop/templates/_cards/manual_state.html
@@ -1,9 +1,13 @@
+{#
 <div class="row text-center" style="margin-bottom: 30px">
             <button class="btn btn-primary" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2"> MANUAL CONTROL </button>
 </div>
 
+#}
+
+
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-lg-12">
         <div class="collapse multi-collapse"  id="multiCollapseExample2">
              <div class="card text-center">
                 <div class="header">
@@ -47,7 +51,7 @@
     </div>
 </div>
 <div class="row"></div>
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <div class="collapse multi-collapse"  id="multiCollapseExample2">
              <div class="card text-center">
                 <div class="header">
@@ -80,7 +84,7 @@
                     <div class="collapse" id="solenoid-controls">
                     <hr>
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-lg-6">
                                 <div id="solenoid-states" class="btn-group btn-group-vertical" data-toggle="buttons">
                                     <label  class="btn manual-btn solenoid-state-btn btn-lg " data-solenoid-index="0">
                                         <input type="checkbox" name="options" autocomplete="off" > SOL1
@@ -93,7 +97,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-lg-6">
                                 <div class="btn-group btn-group-vertical" data-toggle="buttons">
                                     <label class="btn manual-btn solenoid-state-btn btn-lg" data-solenoid-index="3">
                                         <input type="checkbox" name="options" autocomplete="off"> SOL4
@@ -111,7 +115,7 @@
         </div>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <div class="collapse multi-collapse"  id="multiCollapseExample2">
              <div class="card text-center">
                 <div class="header">
@@ -143,27 +147,6 @@
     </div>
 
     <script src="{{ url_for('static', filename='assets/js/ManualStateControl.js') }}" type="text/javascript"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <style>
 
