Frontend arming with validation : tested

--- a/OnLand/ControlLaptop/templates/_cards/commands.html
+++ b/OnLand/ControlLaptop/templates/_cards/commands.html
@@ -7,25 +7,25 @@
        <div class="row">
            <div class="col-md-6">
                <div class="row text-center">
-                    <button class="btn btn-warning btn-command" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2"> ARM </button>
+                    <button class="btn btn-warning btn-command" type="button" data-toggle="collapse" data-target="#armingCommandCollapse" aria-expanded="false" aria-controls="armingCommandCollapse"> ARM </button>
                </div>
                <div class="row text-center">
-                    <button class="btn btn-warning btn-command" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2"> DISARM </button>
+                    <button class="btn btn-warning btn-command"> DISARM </button>
                </div>
                <div class="row text-center">
-                    <button class="btn btn-warning btn-command" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2"> FLIGHT </button>
+                    <button class="btn btn-warning btn-command" > FLIGHT </button>
                 </div>
            </div>
            <div class="col-md-6">
 
                 <div class="row text-center">
-                    <button class="btn btn-primary btn-command" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2"> RESTART </button>
+                    <button class="btn btn-primary btn-command"> RESTART </button>
                 </div>
                <div class="row text-center">
-                    <button class="btn btn-primary btn-command" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2"> OVERRIDES </button>
+                    <button class="btn btn-primary btn-command"> OVERRIDES </button>
                 </div>
                 <div class="row text-center">
-                    <button class="btn btn-info btn-command" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2"> MANUAL CONTROL </button>
+                    <button class="btn btn-info btn-command" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="manualControlsCollapse"> MANUAL CONTROL </button>
                 </div>
            </div>
        </div>
@@ -34,6 +34,9 @@
        </div>
    </div>
 </div>
+
+
+
  <style>
      .btn-command{
          overflow: hidden;
@@ -41,6 +44,4 @@
          width: -webkit-fill-available;
          color: black !important;
      }
-
-
  </style>
