--- a/OnLand/ControlLaptop/templates/_cards/flightProfile.html
+++ b/OnLand/ControlLaptop/templates/_cards/flightProfile.html
@@ -13,12 +13,12 @@
     <tr>
       <th scope="row"></th>
       <td><b>Motor Torque</b></td>
-      <td><span id="motorToruqe">500</span></td>
+      <td><span id="motorTorque">500</span></td>
     </tr>
     <tr>
       <th scope="row"></th>
       <td><b>Flight Distance</b></td>
-      <td><span id="maxFlightDistance">800m</span></td>
+      <td><span id="flightDistance">800m</span></td>
     </tr>
     <tr>
       <th scope="row"></th>
