--- a/OnLand/ControlLaptop/templates/_cards/manual_state.html
+++ b/OnLand/ControlLaptop/templates/_cards/manual_state.html
@@ -5,10 +5,9 @@
 
 #}
 
-
+  <div class="collapse multi-collapse"  id="manualControlsCollapse">
 <div class="row">
     <div class="col-lg-12">
-        <div class="collapse multi-collapse"  id="multiCollapseExample2">
              <div class="card text-center">
                 <div class="header">
                     <h5 class="title">Manual <b>Pod</b> Control</h5>
@@ -47,12 +46,10 @@
                     </div>
                 </div>
              </div>
-        </div>
     </div>
 </div>
 <div class="row"></div>
     <div class="col-lg-6">
-        <div class="collapse multi-collapse"  id="multiCollapseExample2">
              <div class="card text-center">
                 <div class="header">
                     <h5 class="title">Manual <b>Brake Node</b> Control</h5>
@@ -112,11 +109,10 @@
 
                 </div>
              </div>
-        </div>
+
     </div>
 
     <div class="col-lg-6">
-        <div class="collapse multi-collapse"  id="multiCollapseExample2">
              <div class="card text-center">
                 <div class="header">
                     <h5 class="title">Manual <b>LVDC Node</b> Control</h5>
@@ -143,9 +139,9 @@
                     </div>
                 </div>
              </div>
-        </div>
-    </div>
 
+    </div>
+  </div>
     <script src="{{ url_for('static', filename='assets/js/ManualStateControl.js') }}" type="text/javascript"></script>
 
 <style>
