--- a/OnLand/ControlLaptop/templates/_cards/states.html
+++ b/OnLand/ControlLaptop/templates/_cards/states.html
@@ -13,17 +13,17 @@
     <tr>
       <th scope="row"></th>
       <td><b>Flight Computer</b></td>
-      <td><span id="motorToruqe">Standby</span></td>
+      <td><span id="podState">Standby</span></td>
     </tr>
     <tr>
       <th scope="row"></th>
       <td><b>Brake Node</b></td>
-      <td><span id="maxFlightDistance">Standby</span></td>
+      <td><span id="brakeNodeState">Standby</span></td>
     </tr>
     <tr>
       <th scope="row"></th>
       <td><b>LVDC Node</b></td>
-      <td><span id="maxFlightTime">Standby</span></td>
+      <td><span id="lvdcNodeState">Standby</span></td>
     </tr>
   </tbody>
 </table>
