--- a/OnLand/ControlLaptop/templates/battery.html
+++ b/OnLand/ControlLaptop/templates/battery.html
@@ -3,20 +3,20 @@
 {% block content %}
 
 <div class="row">
-    {% include '_cards/battery_header.html' %}
+    {% include '_cards/archived/battery_header.html' %}
 </div>
 <div class="row">
     <div class="col-md-3">
-        {% include '_cards/cells1.html' %}
+        {% include '_cards/archived/cells1.html' %}
     </div>
     <div class="col-md-3">
-        {% include '_cards/cells2.html' %}
+        {% include '_cards/archived/cells2.html' %}
     </div>
     <div class="col-md-3">
-        {% include '_cards/cells3.html' %}
+        {% include '_cards/archived/cells3.html' %}
     </div>
     <div class="col-md-3">
-        {% include '_cards/cells4.html' %}
+        {% include '_cards/archived/cells4.html' %}
     </div>
 </div>
 
