--- a/OnLand/ControlLaptop/templates/dashboard.html
+++ b/OnLand/ControlLaptop/templates/dashboard.html
@@ -19,11 +19,15 @@
         {% include '_cards/connectionCards.html' %}
     </div>
     {% include '_cards/manual_state.html' %}
+    {% include '_cards/armModal.html' %}
     <div class="row">
        <div class="col-md-6">
           {% include 'archived/sensor_status.html' %}
        </div>
-       <div class="col-md-6">
+       <div class="col-md-4">
+          {% include 'archived/battery_header.html' %}
+       </div>
+       <div class="col-md-2">
           {% include '_cards/events.html' %}
        </div>
     </div>
