--- a/OnLand/ControlLaptop/static/assets/css/Base.css
+++ b/OnLand/ControlLaptop/static/assets/css/Base.css
@@ -12,6 +12,9 @@
   --lightYellow:#FFB484;
 }
 
+.card{
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(63, 63, 68, 0.4) !important;
+}
 
 .card-top{
     height: 350px;
