--- a/OnLand/ControlLaptop/templates/_cards/navigation.html
+++ b/OnLand/ControlLaptop/templates/_cards/navigation.html
@@ -13,17 +13,17 @@
     <tr>
       <th scope="row"></th>
       <td><b>Distance</b></td>
-      <td><span id="distanceTraveled">0</span>m</td>
+      <td><span id="podPosition">0</span>m</td>
     </tr>
     <tr>
       <th scope="row"></th>
       <td><b>Velocity</b></td>
-      <td><span id="velocity">0</span>m/s</td>
+      <td><span id="podVelocity">0</span>m/s</td>
     </tr>
     <tr>
       <th scope="row"></th>
       <td><b>Acceleration</b></td>
-      <td><span id="acceleration">0</span>m/s/s</td>
+      <td><span id="podAccelerationX">0</span>m/s/s</td>
     </tr>
   </tbody>
 </table>
