Refactor connecting to the pod for various initial conditions

--- a/OnLand/ControlLaptop/templates/_cards/navigation.html
+++ b/OnLand/ControlLaptop/templates/_cards/navigation.html
@@ -36,3 +36,15 @@
       </div>
    </div>
 </div>
+
+
+<script>
+
+socket.on('pod_telemetry', function (data) {
+    data = JSON.parse(data);
+
+
+
+});
+
+</script>
