--- a/OnLand/ControlLaptop/templates/dashboard.html
+++ b/OnLand/ControlLaptop/templates/dashboard.html
@@ -19,7 +19,7 @@
         {% include '_cards/connectionCards.html' %}
     </div>
     {% include '_cards/manual_state.html' %}
-    {% include '_cards/armModal.html' %}
+    {% include '_forms/setFlightProfile.html' %}
     <div class="row">
        <div class="col-md-6">
           {% include 'archived/sensor_status.html' %}
