--- a/OnLand/ControlLaptop/templates/_cards/commands.html
+++ b/OnLand/ControlLaptop/templates/_cards/commands.html
@@ -4,22 +4,24 @@
       <p class="category"></p>
    </div>
    <div class="content">
+       <div class="row text-center">
+            <button class="btn btn-success btn-command" > FLIGHT </button>
+       </div>
        <div class="row">
            <div class="col-md-6">
                <div class="row text-center">
-                    <button class="btn btn-warning btn-command" type="button" data-toggle="collapse" data-target="#armingCommandCollapse" aria-expanded="false" aria-controls="armingCommandCollapse"> ARM </button>
+                   <button class="btn btn-warning btn-command"> ARM </button>
                </div>
                <div class="row text-center">
                     <button class="btn btn-warning btn-command"> DISARM </button>
                </div>
                <div class="row text-center">
-                    <button class="btn btn-warning btn-command" > FLIGHT </button>
+                    <button class="btn btn-warning btn-command" > RESTART </button>
                 </div>
            </div>
            <div class="col-md-6">
-
                 <div class="row text-center">
-                    <button class="btn btn-primary btn-command"> RESTART </button>
+                    <button class="btn btn-primary btn-command" type="button" data-toggle="collapse" data-target="#flightProfileCollapse" aria-expanded="false" aria-controls="flightProfileCollapse"> SET PROFILE </button>
                 </div>
                <div class="row text-center">
                     <button class="btn btn-primary btn-command"> OVERRIDES </button>
@@ -40,7 +42,7 @@
  <style>
      .btn-command{
          overflow: hidden;
-         margin: .8em;
+         margin: .6em;
          width: -webkit-fill-available;
          color: black !important;
      }
