--- a/OnLand/ControlLaptop/templates/_forms/setPodConfiguration.html
+++ b/OnLand/ControlLaptop/templates/_forms/setPodConfiguration.html
@@ -3,7 +3,7 @@
     <h4 class="title">Configuration Profile</h4>
   </div>
   <div class="content">
-    <form action="" method="post" id="configuration-form">
+    <form id="configuration-form">
       {{ configuration_form.csrf_token }}
       <div class="row">
         <div class="form-group col-md-6">
@@ -11,29 +11,8 @@
         {{ configuration_form.retrieval_timeout (class="form-control js-config-form-input", id="retrieval-timout",value=saved_configuration['retrieval_timeout'])}}
         </div>
         <div class="form-group col-md-6">
-          {{ configuration_form.max_flight_time.label }}
-          {{ configuration_form.max_flight_time (class="form-control js-config-form-input", id="max-flight-time", value=saved_configuration['max_flight_time'])}}
-        </div>
-      </div>
-      <div class="row">
-        <div class="form-group col-md-6">
-          {{ configuration_form.motor_speed.label }}
-          {{ configuration_form.motor_speed (class="form-control js-config-form-input", id="motor-speed",value=saved_configuration['motor_speed'])}}
-        </div>
-        <div class="form-group col-md-6">
-          {{ configuration_form.telemetry_port.label }}
-          {{ configuration_form.telemetry_port (class="form-control js-config-form-input", id="telemetry-port",value=saved_configuration['telemetry_port'])}}
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="form-group col-md-6">
           {{ configuration_form.command_port.label }}
           {{ configuration_form.command_port (class="form-control js-config-form-input", id="command-port",value=saved_configuration['command_port'])}}
-        </div>
-        <div class="form-group col-md-6">
-          {{ configuration_form.flight_Length.label }}
-          {{ configuration_form.flight_Length (class="form-control js-config-form-input", id="flight-length", value=saved_configuration['flight_length'])}}
         </div>
       </div>
       <div class="row">
@@ -47,9 +26,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="text-center">
-          {{ configuration_form.pod_driver.label }}
-          {{ configuration_form.pod_driver (id="pod-driver",value=True if saved_configuration['pod_driver']=='Motor' else 'False') }}
+        <div class="form-group col-md-6">
+            {{ configuration_form.telemetry_port.label }}
+            {{ configuration_form.telemetry_port (class="form-control js-config-form-input", id="telemetry-port",value=saved_configuration['telemetry_port'])}}
         </div>
       </div>
       <div class="text-center">
@@ -59,6 +38,8 @@
     </form>
   </div>
 </div>
+
+{#
 
 <div class="card ">
    <div class="header">
@@ -167,3 +148,4 @@
       </div>
    </div>
 </div>
+#}
