Hotfix refactor socket controller (#39)
* code refactor

* added readmes

* added readmes

* code refactor

* added readmes

* updated changes

--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -17,6 +17,8 @@
     <!-- Bootstrap Toggle-->
     <link href="{{ url_for('static', filename='assets/vendors/bootstrap-toggle-master/css/bootstrap-toggle.min.css') }}" rel="stylesheet"/>
 
+    <!--  Fonts and icons -->
+    <link href="{{ url_for('static', filename='assets/vendors/fonts_icons/googlefont-Roboto.css') }}" rel="stylesheet" >
     <link href="{{ url_for('static', filename='assets/vendors/fonts_icons/pe-icon-7-stroke.css') }}" rel="stylesheet" />
     <!-- Animated Icons -->
     <link href="{{ url_for('static',filename='assets/vendors/loaders/loaders.css') }}" rel="stylesheet">
