--- a/OnLand/ControlLaptop/templates/_cards/sensor_values.html
+++ b/OnLand/ControlLaptop/templates/_cards/sensor_values.html
@@ -3,7 +3,7 @@
         <h4 class="title">Sensor Overview</h4>
     </div>
     <div class="content">
-        <table class="table table-hover table-striped table-condensed">
+        <table class="table table-hover table-striped table-condensed" id="sensorTable">
             <thead>
             <tr class="d-flex">
                 <th class="col-5" scope="col">Name</th>
