--- a/OnLand/ControlLaptop/templates/_cards/events.html
+++ b/OnLand/ControlLaptop/templates/_cards/events.html
@@ -31,6 +31,7 @@ const updatesTable = $('#events-table-body');
 
 socket.on('pod_telemetry', function (data) {
     data = JSON.parse(data);
+    console.log(data);
     if (!data.hasOwnProperty('updateMessages')) {
         return;
     }
