--- a/OnLand/ControlLaptop/templates/_cards/inverter_values.html
+++ b/OnLand/ControlLaptop/templates/_cards/inverter_values.html
@@ -3,22 +3,18 @@
         <h4 class="title">Inverter Overview</h4>
     </div>
     <div class="content">
-        <table class="table table-hover table-striped table-condensed">
+        <table class="table table-hover table-striped table-condensed inverter-table">
             <thead>
             <tr class="d-flex">
-                <th class="col-5" scope="col">Name</th>
-                <th class="col-2" scope="col">Min</th>
-                <th class="col-3" scope="col">Actual</th>
-                <th class="col-2" scope="col">Max</th>
+                <th class="col-6" scope="col">Name</th>
+                <th class="col-6" scope="col">Value</th>
             </tr>
             </thead>
-            <tbody>
+            <tbody id="inverter-table-body">
             {% for key, value in inverter_sensors.items() %}
                 <tr class="d-flex sensor-row" id="{{ key }}">
-                    <th class="text-center col-5" scope="row">{{ value['name_pretty'] }}</th>
-                    <td id="{{ key }}-min" class="col-2"></td>
-                    <td id="{{ key }}-actual" class="col-3"></td>
-                    <td id="{{ key }}-max" class="col-2"></td>
+                    <th class="text-center col-6" scope="row">{{ value['name_pretty'] }}</th>
+                    <td id="{{ key }}-actual" class="col-6"></td>
                 </tr>
             {% endfor %}
 
@@ -27,3 +23,28 @@
     </div>
 </div>
 
+<script>
+
+
+$( document ).ready(function() {
+    socket.emit('join_room','telemetry_updates');
+    $("#inverter-table-body").find("tr").each(function(){ inverterTableBody.push(this.id); });
+});
+
+const inverterTableBody = $('#inverter-table-body');
+
+socket.on('pod_telemetry', function (data) {
+    data = JSON.parse(data);
+    let value, value_cell, value_name;
+    const length = inverterTableBody.length;
+    for (let index = 0; index < length; index++) {
+        value_name = inverterTableBody[index];
+        if(!data.hasOwnProperty(value_name)){
+            continue;
+        }
+        value = data[value_name];
+        value_cell = $("#" + value_name + "-actual");
+        value_cell.text(value.toFixed(2));
+    }
+});
+</script>
