--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -57,6 +57,8 @@
     <script src="{{ url_for('static', filename='assets/js/Dynamic.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/Base.js') }}"></script>
 
+    <script src="{{ url_for('static', filename='assets/js/SensorTable.js') }}"></script>
+
 
 {% endblock %}
 
